[gd_scene load_steps=29 format=2]

[ext_resource path="res://ui/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://objects/solidmap/solid.png" type="Texture" id=2]
[ext_resource path="res://ui/menu/menu.gdshader" type="Shader" id=3]
[ext_resource path="res://ui/config/Nexa Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://base/state machine/state_machine.gd" type="Script" id=5]
[ext_resource path="res://ui/menu/states/menu.gd" type="Script" id=6]
[ext_resource path="res://ui/menu/states/transition.gd" type="Script" id=7]
[ext_resource path="res://ui/menu/bg.png" type="Texture" id=8]
[ext_resource path="res://ui/menu/scrolling_texture.tres" type="Shader" id=9]
[ext_resource path="res://ui/menu/states/invisible.gd" type="Script" id=10]
[ext_resource path="res://ui/menu/seeker_loop.wav" type="AudioStream" id=11]
[ext_resource path="res://ui/menu/states/config.gd" type="Script" id=12]
[ext_resource path="res://ui/config/config.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/config/remapper.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/menu/shader.gd" type="Script" id=15]
[ext_resource path="res://ui/menu/menu_nine_patch.png" type="Texture" id=16]
[ext_resource path="res://ui/menu/moving_outline.gdshader" type="Shader" id=17]

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 9 )
shader_param/velocity = Vector2( 0.01, -0.02 )
shader_param/scale = Vector2( 1, 1 )
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/dist_factor = 64.0
shader_param/uv_factor = Vector2( 0.6, 0.3 )
shader_param/time_add = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/dist_factor = 32.0
shader_param/uv_factor = Vector2( 0.7, 0.1 )
shader_param/time_add = null

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/dist_factor = 32.0
shader_param/uv_factor = Vector2( 0.3, 0.6 )
shader_param/time_add = null

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float color_range_min = 0.2;
uniform float color_range_max = 0.4;

vec3 hsv2rgb(vec3 c) {
  vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
  vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
  return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
}

void fragment()
{
	vec4 img = texture(SCREEN_TEXTURE, UV);
	float strength = clamp((img.r + img.b + img.g) / 3.0, 0.0, 1.0);
	COLOR = vec4(hsv2rgb(vec3(mix(color_range_min, color_range_max, img.r), 0.8, 0.6)) * strength, img.a);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/color_range_min = 0.797
shader_param/color_range_max = 1.361

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 17 )
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/modulate = Color( 0, 0, 0, 0.752941 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=11]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Menu" type="CanvasLayer" groups=["menu"]]
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
default_state = "Menu"

[node name="Menu" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
menu_music = ExtResource( 11 )

[node name="Transition" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Invisible" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Config" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Menu" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 608.0

[node name="Shader" type="Control" parent="Menu"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )
time_speed_config = -2.0

[node name="TextureRect" type="TextureRect" parent="Menu/Shader"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )

[node name="Pattern1" type="TextureRect" parent="Menu/Shader"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Pattern2" type="TextureRect" parent="Menu/Shader"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1024.0
margin_right = 984.0
margin_bottom = 416.0
rect_rotation = 90.0
texture = ExtResource( 2 )
expand = true

[node name="Pattern3" type="TextureRect" parent="Menu/Shader"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1024.0
margin_top = 608.0
margin_right = 1024.0
margin_bottom = 608.0
rect_rotation = 180.0
texture = ExtResource( 2 )
expand = true

[node name="Pattern4" type="TextureRect" parent="Menu/Shader"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 608.0
margin_right = -416.0
margin_bottom = 1024.0
rect_rotation = 270.0
texture = ExtResource( 2 )
expand = true

[node name="ColorEffect" type="ColorRect" parent="Menu/Shader"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleMenu" type="Control" parent="Menu"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 608.0

[node name="NinePatchRect" type="NinePatchRect" parent="Menu/TitleMenu"]
material = SubResource( 14 )
margin_left = 720.0
margin_top = 240.0
margin_right = 1013.0
margin_bottom = 352.0
texture = ExtResource( 16 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Title" type="RichTextLabel" parent="Menu/TitleMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 736.0
margin_top = 256.0
margin_right = 736.0
margin_bottom = 256.0
custom_fonts/normal_font = SubResource( 8 )
text = "Seeker test
"

[node name="Instruction" type="RichTextLabel" parent="Menu/TitleMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 736.0
margin_top = 288.0
margin_right = 736.0
margin_bottom = 288.0
custom_fonts/normal_font = SubResource( 10 )
text = "Press jump to start
Press enter for config"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/TitleMenu/Instruction"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="Config" parent="Menu" instance=ExtResource( 13 )]
unique_name_in_owner = true
visible = false
margin_left = 16.0
margin_top = 52.0
margin_right = -496.0
margin_bottom = -156.0
remapper_path = NodePath("../Remapper")

[node name="Remapper" parent="Menu" instance=ExtResource( 14 )]
unique_name_in_owner = true
visible = false

[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
